@@ -609,6 +609,43 @@ static char *add_roff_line_length (char *filter, int *save_cat)
 	return filter;
 }
 
+#ifdef UNDOC_COMMAND
+/* Return non-zero if name is found as an executable regular file on the
+ * $PATH.
+ */
+static int find_in_path (const char *name)
+{
+	char *path = xstrdup (getenv ("PATH"));
+	const char *element;
+	int ret = 0;
+
+	if (!path)
+		/* Eh? Oh well. */
+		return 0;
+
+	for (element = strsep (&path, ":"); element;
+	     element = strsep (&path, ":")) {
+		char *filename;
+		struct stat st;
+
+		if (!*element)
+			element = cwd;
+
+		filename = strappend (NULL, element, "/", name, NULL);
+		if (stat (filename, &st) == -1)
+			continue;
+
+		if (S_ISREG (st.st_mode) && access (filename, X_OK) == 0) {
+			ret = 1;
+			break;
+		}
+	}
+
+	free (path);
+	return ret;
+}
+#endif /* UNDOC_COMMAND */
+
 /*
  * changed these messages from stdout to stderr,
  * (Fabrizio Polacco) Fri, 14 Feb 1997 01:30:07 +0200
@@ -635,9 +672,10 @@ static __inline__ void gripe_no_man (const char *name, const char *sec)
 		putc ('\n', stderr);
 
 #ifdef UNDOC_COMMAND
-	fprintf (stderr,
-		 _("See '%s' for help when manual pages are not available.\n"),
-		 UNDOC_COMMAND);
+	if (find_in_path (name))
+		fprintf (stderr,
+			 _("See '%s' for help when manual pages are not "
+			   "available.\n"), UNDOC_COMMAND);
 #endif
 }
 
