@@ -20,6 +20,9 @@ Major changes since man-db 2.4.1:
 	  itself. This leaves cat pages as the sole remaining reason for man
 	  to be setuid.
 
+	o The "undocumented" message is only displayed if a corresponding
+	  executable is found on the $PATH.
+
 man-db 2.4.1 (22 December 2002)
 ===============================
 
