@@ -1,3 +1,11 @@
+Fri Feb 21 16:40:26 GMT 2003  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (find_in_path): New function to look for executables on
+	  the $PATH.
+	  (gripe_no_man): Only emit the "undocumented" message if a
+	  corresponding executable is found on the $PATH.
+	* docs/NEWS: Document this.
+
 Fri Feb 21 16:26:00 GMT 2003  Colin Watson  <cjwatson@debian.org>
 
 	* docs/NEWS: Preliminary entries for 2.4.2.
